# httpr

./: .gitignore  .pre-commit-config.yaml  404.html  CBOR_IMPLEMENTATION.md  CBOR_TRANSPARENT_API.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yaml  demo_cbor.py  doc1.md  httpr.code-workspace  httpx-quickstart.md  index.html  instructions.md  llms-full.txt  mkdocs.yml  pyo3-docs.md  pyproject.toml  requests.txt  scratch.ipynb  serde_pyobject.md  sitemap.xml
.cache/plugin/social/: manifest.json
.github/: copilot-instructions.md
.github/actions/set-version/: action.yml
.github/workflows/: CI.yml  CI.yml.deprecated  benchmark.yml  build.yml  claude.yml  copilot-setup-steps.yml  mkdocs.yml  release.yml  set_version.py  test.yml
advanced/: index.html
advanced/cookies/: index.html  index.md
advanced/proxy/: index.html
advanced/ssl-tls/: index.html  index.md
api/: index.html
api/async-client/: index.html
api/client/: index.html  index.md
api/functions/: index.html
benchmark/: README.md  benchmark.py  benchmark_cbor.py  generate_image.py  pyproject.toml  requirements.txt  server.py
dev/bench/: data.js
docs/: index.md  quickstart.md
docs/advanced/: cookies.md  index.md  proxy.md  ssl-tls.md
docs/api/: async-client.md  client.md  functions.md  index.md  response.md
docs/tutorial/: async.md  authentication.md  index.md  making-requests.md  response-handling.md
docs/writings/posts/: 2025-02-24-python-http-clients-suck.md
httpr/: __init__.py  httpr.pyi
primp/: __init__.py  primp.pyi
pysrc/: test.py
quickstart/: index.html
rsparallel/: Cargo.toml  README.md  pyproject.toml  server.py
rsparallel/src/: main.rs
rsparallel/ssl/: mt.conf
scripts/: generate_certs.py
search/: search_index.json
site/: 404.html  index.html  index.md  llms.txt  objects.inv  sitemap.xml
site/advanced/: index.html  index.md
site/advanced/cookies/: index.html
site/advanced/proxy/: index.html  index.md
site/advanced/ssl-tls/: index.html
site/api/: index.md
site/api/async-client/: index.md
site/api/client/: index.html  index.md
site/api/functions/: index.md
site/api/response/: index.html  index.md
site/quickstart/: index.md
site/search/: search_index.json
site/tutorial/: index.html  index.md
site/tutorial/async/: index.html
site/tutorial/authentication/: index.html  index.md
site/tutorial/making-requests/: index.html  index.md
site/tutorial/response-handling/: index.html  index.md
site/writings/: index.html
site/writings/2025/02/25/lorem-ipsum-dolor-sit-amet/: index.html  index.md
site/writings/archive/2025/: index.html
src/: exceptions.rs  lib.rs  response.rs  traits.rs  utils.rs
tests/: app.py  cbor_test_server.py  conftest.py  httpx_conns.py  run_server.sh  test_asyncclient.py  test_cbor.py  test_client.py  test_defs.py  test_docs.py  test_exceptions.py  test_ssl.py  test_streaming.py
tests/benchmark/: test_performance.py
tests/e2e/: _test_httpx_compat.py  test_async.py  test_auth.py  test_e2e.py  test_redirects.py  test_ssl.py  test_streaming.py  test_uploads.py
tests/unit/: test_cbor.py  test_client.py  test_defs.py  test_docs.py  test_exceptions.py  test_ssl.py  test_streaming.py
tutorial/: index.html
tutorial/async/: index.html  index.md
tutorial/making-requests/: index.html  index.md
tutorial/response-handling/: index.html
writings/: index.html
writings/2025/02/25/lorem-ipsum-dolor-sit-amet/: index.html
writings/archive/2025/: index.html
