[package]
name = "httpr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "auto-initialize", "macros"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.27", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
pyo3_serde = "0.4"
