[package]
name = "httpr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "auto-initialize"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "default-tls"] }
serde-pyobject = "0.5.0"
serde = "1.0"
serde_json = "1.0"