[package]
name = "httpr"
version = "0.1.0"
edition = "2021"
description = "Fast HTTP client for python"
authors = ["thomasht86"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "httpr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = [
    "extension-module",
    "abi3-py39",
    "indexmap",
    "anyhow",
    "generate-import-lib",
] }
anyhow = "1.0.95"
tracing = { version = "0.1.41", features = ["log-always"] }
pyo3-log = "0.13.2"
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "json",
    "rustls-tls",
    "http2",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "multipart",
    "stream",
] }
encoding_rs = { version = "0.8.35" }
foldhash = "0.1.4"
indexmap = { version = "2.7.1", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] } # for multipart
html2text = "0.13.6"
bytes = "1.10.0"
pythonize = "0.27.0"
serde_json = "1.0.138"
serde_cbor = "0.11.2"
webpki-root-certs = "0.26.8"
rustls-pemfile = "2.2.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
