[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "httpr"
description = "Fast HTTP client for Python"
requires-python = ">=3.9"
license = { text = "MIT License" }
keywords = ["python", "request"]
authors = [{ name = "thomasht86" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

dependencies = []

[project.optional-dependencies]
dev = [
    "certifi",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.25.3",
    "typing_extensions; python_version <= '3.11'", # for Unpack[TypedDict]
    "mypy>=1.14.1",
    "ruff>=0.9.2",
    "maturin",
]
scratch = [
    "httpr[dev]",
    "matplotlib",
    "pandas",
    "jupyter",
    "ipykernel",
    "httpx",
    "gunicorn",
    "uvicorn",
    "trustme",
    "starlette",
    "fastapi",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 120
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.mypy]
python_version = "3.8"
