[build-system]
requires = [ "maturin>=1.5,<2.0",]
build-backend = "maturin"

[project]
name = "httpr"
description = "Fast HTTP client for Python"
requires-python = ">=3.10"
keywords = [ "python", "request",]
classifiers = [ "Programming Language :: Rust", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy", "Topic :: Internet :: WWW/HTTP", "Topic :: Software Development :: Libraries :: Python Modules",]
version = "0.2.3"
dependencies = []
[[project.authors]]
name = "thomasht86"

[project.license]
text = "MIT License"

[project.optional-dependencies]
dev = [ "certifi", "pytest>=8.1.1", "pytest-asyncio>=0.25.3", "pytest-httpbin>=2.1.0", "typing_extensions; python_version <= '3.11'", "mypy>=1.14.1", "ruff>=0.9.2", "maturin", "trustme", "cbor2",]
docs = [ "mkdocs-material[imaging]", "mkdocstrings[python]>=0.27.0", "mkdocs-gen-files", "mkdocs-literate-nav", "mkdocs-llmstxt",]
benchmark = [ "matplotlib", "pandas", "starlette", "uvicorn", "requests", "httpx", "tls-client", "curl_cffi", "pycurl", "typing_extensions", "aiohttp", "cbor2", "jupyter", "ipykernel", "gunicorn", "fastapi",]

[tool.maturin]
features = [ "pyo3/extension-module",]

[tool.ruff]
line-length = 120
exclude = [ ".github",]

[tool.ruff.lint]
select = [ "E", "F", "UP", "B", "SIM", "I",]

[tool.ruff.lint.per-file-ignores]
# Tests: allow assert statements, broad exception catching, multiple with statements
"tests/**" = [
    "B011",   # assert-false
    "B017",   # assert-raises-exception  
    "SIM117", # multiple-with-statements (common in test fixtures)
]
# Benchmarks: more relaxed rules for scripts
"benchmark/**" = [
    "B018",   # useless-expression (intentional for benchmarking .text/.json())
    "SIM108", # if-else-block-instead-of-if-exp (readability preference)
    "SIM117", # multiple-with-statements
]

[tool.mypy]
python_version = "3.10"
exclude = [ "benchmark/",]

[[tool.mypy.overrides]]
module = [
    "pytest_httpbin.*",
    "starlette.*",
    "httpx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
[[tool.uv.cache-keys]]
file = "pyproject.toml"

[[tool.uv.cache-keys]]
file = "rust/Cargo.toml"

[[tool.uv.cache-keys]]
file = "**/*.rs"
