[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pandas",
    "starlette",
    "uvicorn",
    "requests",
    "httpx",
    "tls-client",
    "httpr",
    "curl_cffi",
    "pycurl",
    "typing_extensions",
    "aiohttp",
]

[tool.uv.sources]
httpr = { workspace = true }
